--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ detekt = "1.22.0"
 dokka = "1.7.20"
 gradleTestLogger = "3.2.0"
 hoplite = "2.7.1"
-jackson = "2.13.1"
+jackson = "2.14.2"
 jimfs = "1.2"
 junit = "5.9.2"
 koin2 = "2.2.3"
@@ -45,6 +45,7 @@ ktor-client-contentNegotiation = { module = "io.ktor:ktor-client-content-negotia
 
 ktor-serialization-jackson = { module = "io.ktor:ktor-serialization-jackson", version.ref = "ktor" }
 
+jackson-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson" }
 jackson-time = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jsr310", version.ref = "jackson" }
 jackson-dataformats-toml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-toml", version.ref = "jackson" }
 
