--- a/settings.gradle
+++ b/settings.gradle
@@ -20,8 +20,10 @@ include 'tegral-catalog',
         'tegral-openapi:tegral-openapi-ktorui',
         'tegral-openapi:tegral-openapi-scriptdef',
         'tegral-openapi:tegral-openapi-scripthost',
+        'tegral-prismakt:tegral-prismakt-generator',
         'tegral-services:tegral-services-api',
         'tegral-services:tegral-services-feature',
+        'tegral-utils:tegral-utils-logtools',
         'tegral-web:tegral-web-appdefaults',
         'tegral-web:tegral-web-appdsl',
         'tegral-web:tegral-web-apptest',
