--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include 'tegral-catalog',
         'tegral-openapi:tegral-openapi-scriptdef',
         'tegral-openapi:tegral-openapi-scripthost',
         'tegral-prismakt:tegral-prismakt-generator',
+        'tegral-prismakt:tegral-prismakt-generator-tests:simple',
         'tegral-services:tegral-services-api',
         'tegral-services:tegral-services-feature',
         'tegral-utils:tegral-utils-logtools',
