--- a/tegral-prismakt/tegral-prismakt-generator/build.gradle
+++ b/tegral-prismakt/tegral-prismakt-generator/build.gradle
@@ -8,6 +8,9 @@ dependencies {
     implementation project(":tegral-di:tegral-di-core")
     implementation libs.logback
     implementation libs.jackson.kotlin
+    implementation libs.exposed.core
+    implementation libs.exposed.dao
+    implementation libs.kotlinPoet
 
     testImplementation libs.jimfs
 }
