--- a/code-coverage/build.gradle
+++ b/code-coverage/build.gradle
@@ -16,6 +16,8 @@ def projects = [
     ':tegral-di:tegral-di-test-mockk',
     ':tegral-featureful',
     ':tegral-logging',
+    ':tegral-niwen:tegral-niwen-lexer',
+    ':tegral-niwen:tegral-niwen-parser',
     ':tegral-openapi:tegral-openapi-cli',
     ':tegral-openapi:tegral-openapi-dsl',
     ':tegral-openapi:tegral-openapi-feature',
@@ -24,8 +26,11 @@ def projects = [
     ':tegral-openapi:tegral-openapi-ktorui',
     ':tegral-openapi:tegral-openapi-scriptdef',
     ':tegral-openapi:tegral-openapi-scripthost',
+    ':tegral-prismakt:tegral-prismakt-generator',
+    ':tegral-prismakt:tegral-prismakt-generator-tests:simple',
     ':tegral-services:tegral-services-api',
     ':tegral-services:tegral-services-feature',
+    ':tegral-utils:tegral-utils-logtools',
     ':tegral-web:tegral-web-appdefaults',
     ':tegral-web:tegral-web-appdsl',
     ':tegral-web:tegral-web-apptest',
