--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,8 @@ include 'tegral-catalog',
         'tegral-di:tegral-di-test-mockk',
         'tegral-featureful',
         'tegral-logging',
+        'tegral-niwen:tegral-niwen-lexer',
+        'tegral-niwen:tegral-niwen-parser',
         'tegral-openapi:tegral-openapi-cli',
         'tegral-openapi:tegral-openapi-dsl',
         'tegral-openapi:tegral-openapi-feature',
