--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ swaggerUi = "4.15.5"
 clikt = "3.5.0"
 exposed = "0.41.1"
 kotlinPoet = "1.12.0"
+sqlite = "3.41.0.0"
 
 [libraries]
 # Dependencies
@@ -68,9 +69,13 @@ swaggerUi = { module = "org.webjars:swagger-ui", version.ref = "swaggerUi" }
 clikt = { module = "com.github.ajalt.clikt:clikt", version.ref = "clikt" }
 
 exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed" }
+exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
 exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed" }
+exposed-javatime = { module = "org.jetbrains.exposed:exposed-java-time", version.ref = "exposed" }
 
 kotlinPoet = { module = "com.squareup:kotlinpoet", version.ref = "kotlinPoet" }
+
+sqlite = { module = "org.xerial:sqlite-jdbc", version.ref  = "sqlite" }
 
 # Test dependencies
 
