--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,8 @@ exposed = "0.41.1"
 kotlinPoet = "1.12.0"
 sqlite = "3.41.0.0"
 testcontainers = "1.18.0"
+postgresql = "42.6.0"
+mysql = "8.0.33"
 
 [libraries]
 # Dependencies
@@ -94,6 +96,9 @@ detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", 
 
 testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 testcontainers-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "testcontainers" }
+
+sqlDrivers-mysql = { module = "com.mysql:mysql-connector-j", version.ref = "mysql" }
+sqlDrivers-postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
 
 [plugins]
 
