--- a/settings.gradle
+++ b/settings.gradle
@@ -23,8 +23,10 @@ include 'tegral-catalog',
         'tegral-openapi:tegral-openapi-scriptdef',
         'tegral-openapi:tegral-openapi-scripthost',
         'tegral-prismakt:tegral-prismakt-generator',
+        'tegral-prismakt:tegral-prismakt-generator-tests:mysql-types',
         'tegral-prismakt:tegral-prismakt-generator-tests:pgsql-types',
-        'tegral-prismakt:tegral-prismakt-generator-tests:simple',
+        'tegral-prismakt:tegral-prismakt-generator-tests:simple-dao',
+        'tegral-prismakt:tegral-prismakt-generator-tests:simple-sql',
         'tegral-services:tegral-services-api',
         'tegral-services:tegral-services-feature',
         'tegral-utils:tegral-utils-logtools',
