--- a/settings.gradle
+++ b/settings.gradle
@@ -27,6 +27,7 @@ include 'tegral-catalog',
         'tegral-prismakt:tegral-prismakt-generator-tests:pgsql-types',
         'tegral-prismakt:tegral-prismakt-generator-tests:simple-dao',
         'tegral-prismakt:tegral-prismakt-generator-tests:simple-sql',
+        'tegral-prismakt:tegral-prismakt-generator-tests-support',
         'tegral-services:tegral-services-api',
         'tegral-services:tegral-services-feature',
         'tegral-utils:tegral-utils-logtools',
