ci: fix codecov with new aggregated code coverage

--- a/buildSrc/src/main/groovy/guru.zoroark.tegral.coverage-aggregator.gradle
+++ b/buildSrc/src/main/groovy/guru.zoroark.tegral.coverage-aggregator.gradle
@@ -92,4 +92,9 @@ tasks.register("aggregatedCodeCoverage", JacocoReport) {
     executionData(configurations.aggregatedProjectsExecData)
     sourceDirectories.from(configurations.aggregatedProjectsSources)
     classDirectories.from(configurations.aggregatedProjectsClasses)
+
+    reports {
+        html.required = true
+        xml.required = true
+    }
 }
