--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches: [main]
-    tags: ["v*.*.*"]
+    tags: ["v*.*.*", "website*"]
   pull_request:
     types: [opened, synchronize, reopened]
 
@@ -185,7 +185,7 @@ jobs:
 
   publish-release:
     name: Publish release
-    if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')"
+    if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')"
     runs-on: ubuntu-latest
     needs: [validate-wrapper, check, build-deploy-website]
     steps:
