feat: add in-code configurable features + fundef in tegral-web

--- a/settings.gradle
+++ b/settings.gradle
@@ -38,6 +38,7 @@ include 'tegral-catalog',
         'tegral-web:tegral-web-controllers',
         'tegral-web:tegral-web-controllers-test',
         'tegral-web:tegral-web-greeter',
+        'e2e-tests:fundef-modules',
         'e2e-tests:run-with-java-11',
         'e2e-tests:run-with-java-17',
         'e2e-tests:run-without-config'
