--- a/tegral-web/tegral-web-controllers/build.gradle
+++ b/tegral-web/tegral-web-controllers/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation libs.ktor.server.netty
     testImplementation libs.ktor.client.java
     testImplementation libs.ktor.client.contentNegotiation
+    testImplementation libs.logback
 }
 
 ext.humanName = "Tegral Web Controllers"
