--- a/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-common-conventions.gradle
@@ -19,6 +19,7 @@ dependencies {
     testImplementation libs.mockk
     testImplementation libs.kotlin.test.junit5
     testImplementation libs.junit.jupiterApi
+    testImplementation libs.logback
     testRuntimeOnly libs.junit.jupiterEngine
 
     detektPlugins libs.detekt.formatting
