chore(tegral-prismakt): use a simpler system for launching PrismaKT in tests
And recommend this system for users.

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -16,7 +16,8 @@ dependencies {
         libs.plugins.gradleTestLogger,
         libs.plugins.kotlinBcv,
         libs.plugins.nodeGradle,
-        libs.plugins.licenser
+        libs.plugins.licenser,
+        libs.plugins.shadow
     ]
 
     for (pluginDef in pluginsDef) {
