--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,6 +51,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           files: "code-coverage/build/reports/jacoco/aggregatedCodeCoverage/aggregatedCodeCoverage.xml"
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   check-examples:
     name: "Check examples"
