chore: update dependency versions

--- a/tegral-prismakt/tegral-prismakt-generator/build.gradle
+++ b/tegral-prismakt/tegral-prismakt-generator/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'guru.zoroark.tegral.kotlin-published-library-conventions'
     id 'application'
-    id 'com.github.johnrengelman.shadow'
+    id 'com.gradleup.shadow'
 }
 
 dependencies {
