--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 coroutines = "1.9.0"
-detekt = "1.23.7"
+detekt = "1.23.6"  # waiting for a release with a fix for https://github.com/detekt/detekt/issues/7634
 dokka = "1.9.20"
 gradleTestLogger = "4.0.0"
 hoplite = "2.8.2"
