--- a/docs/package.json
+++ b/docs/package.json
@@ -15,25 +15,27 @@
     "preinstall": "npx -y only-allow pnpm"
   },
   "dependencies": {
-    "@algolia/client-search": "^4.14.3",
-    "@docusaurus/core": "2.4.0",
-    "@docusaurus/preset-classic": "2.4.0",
-    "@docusaurus/theme-mermaid": "^2.4.0",
-    "@mdx-js/react": "^1.6.22",
+    "@algolia/client-search": "^5.9.1",
+    "@docusaurus/core": "3.5.2",
+    "@docusaurus/preset-classic": "3.5.2",
+    "@docusaurus/theme-mermaid": "^3.5.2",
+    "@mdx-js/react": "^3.1.0",
     "ackee-tracker": "^5.1.0",
-    "clsx": "^1.2.1",
-    "mdx-mermaid": "^1.3.2",
-    "mermaid": "~9.1.7",
-    "prism-react-renderer": "^1.3.5",
+    "clsx": "^2.1.1",
+    "mdx-mermaid": "^2.0.1",
+    "mermaid": "~11.3.0",
+    "prism-react-renderer": "^2.4.0",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.9.4",
-    "unist-util-visit": "^2.0.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.6.3",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.0",
-    "@types/react": "^18.0.27"
+    "@docusaurus/module-type-aliases": "3.5.2",
+    "@docusaurus/types": "^3.5.2",
+    "@types/node": "^22.7.7",
+    "@types/react": "^18.3.11"
   },
   "browserslist": {
     "production": [
