chore: fix build

--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -12,7 +12,7 @@ configurations {
 
 def docsInputFiles = [
     'babel.config.js',
-    'docusaurus.config.js',
+    'docusaurus.config.ts',
     'sidebars.js'
 ]
 
