--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -142,7 +142,7 @@ jobs:
     name: Publish release
     if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')"
     runs-on: ubuntu-latest
-    needs: [validate-wrapper, check, build-deploy-website]
+    needs: [validate-wrapper, check, build-deploy-website, check-examples]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
