--- a/website/build.gradle
+++ b/website/build.gradle
@@ -10,49 +10,24 @@ repositories {
 configurations {
     servine
     docusaurus
+    dokkaHtml
 }
 
 dependencies {
     servine 'guru.zoroark.servine:servine:0.0.2-SNAPSHOT'
     docusaurus(project(path: ":docs", configuration: 'web'))
-}
+    dokkaHtml(project(path: ":dokka", configuration: 'dokkaHtml'))
 
-import org.apache.tools.ant.filters.ReplaceTokens
-
-task rewriteDokkaLinks(type: Copy) {
-    into layout.buildDirectory.dir("dokkaHtml")
-
-    dependsOn rootProject.tasks.dokkaHtmlMultiModule
-
-    from(rootProject.layout.buildDirectory.dir("dokka/htmlMultiModule")) {
-        filesMatching(["index.html"]) {
-            filter { line ->
-                line.replaceAll("href=\"", "href=\"/dokka/")
-                    .replaceAll("src=\"", "src=\"/dokka/")
-                    .replaceAll("pathToRoot = \"\"", "pathToRoot = \"/dokka\"")
-            }
-        }
-
-        filesMatching(["scripts/pages.json"]) {
-            filter { line -> line.replaceAll("\"location\":\"", "\"location\":\"/") }
-        }
-
-        filesMatching(["scripts/navigation-loader.js"]) {
-            filter { line -> line.replaceAll("pathToRoot", "\"/dokka/\"") }
-        }
-    }
 }
 
 task assembleFiles(type: Copy) {
     into layout.buildDirectory.dir("output")
 
     from(configurations.docusaurus)
-    from(layout.buildDirectory.dir("dokkaHtml")) {
+    from(configurations.dokkaHtml) {
         into 'dokka'
     }
     from('_redirects')
-
-    dependsOn rewriteDokkaLinks
 }
 
 task serve(type: JavaExec) {
