--- a/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-published-library-conventions.gradle
+++ b/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-published-library-conventions.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'guru.zoroark.tegral.kotlin-common-conventions'
     id 'guru.zoroark.tegral.publish-conventions'
-    id 'org.jetbrains.dokka'
+    id 'dev.adamko.dokkatoo'
     id 'org.jetbrains.kotlinx.binary-compatibility-validator'
     id 'maven-publish'
     id 'signing'
@@ -14,9 +14,9 @@ detekt {
     buildUponDefaultConfig = true
 }
 
-tasks.dokkaHtmlPartial {
-    dokkaSourceSets {
-        configureEach {
+afterEvaluate {
+    dokkatoo {
+        dokkatooSourceSets.configureEach {
             includes.from("MODULE.md")
         }
     }
