chore: fix versions

--- a/examples/tutorial/step-1/app/build.gradle
+++ b/examples/tutorial/step-1/app/build.gradle
@@ -30,8 +30,9 @@ application {
     mainClass = 'org.example.tegraltutorial.AppKt'
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        jvmTarget = '11'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+        vendor = JvmVendorSpec.ADOPTIUM
     }
 }
