--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,15 +27,6 @@ jobs:
           distribution: "temurin"
           java-version: "17"
 
-      # Required for PrismaKT tests (which call npx prisma)
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 16
-
-      - run: npm i -g prisma
-        # HACK Sometimes, CI tests fail with a "TAR_ENTRY_ERROR ENOENT" error. This may be caused by a race condition
-        #      from concurrent installations of Prisma, this attempts to fix it.
-
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
@@ -43,7 +34,7 @@ jobs:
         run: ./gradlew check
 
       - name: Upload code coverage to CodeCov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
           files: "code-coverage/build/reports/jacoco/aggregatedCodeCoverage/aggregatedCodeCoverage.xml"
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -117,7 +108,7 @@ jobs:
 
   publish-snapshot:
     name: Publish snapshot
-    if: "github.event_name == 'push' && !startsWith(github.ref, 'refs/tags/')"
+    if: github.event_name == 'push' && !startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     needs: [validate-wrapper, check, check-examples]
     steps:
@@ -140,7 +131,7 @@ jobs:
 
   publish-release:
     name: Publish release
-    if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')"
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     needs: [validate-wrapper, check, build-deploy-website, check-examples]
     steps:
